# fancy-hangman-rs

./: .env  .gitignore  Cargo.toml  README.md
res/db/: dictionary.db
res/de/: word_base.txt
res/en/: word_base.txt
src/: dictionary.rs  lib.rs  main.rs  models.rs  schema.rs  util.rs
src/db/: db_dictionary.rs
src/lang/: locale.rs
src/maintenance/: import.rs
tests/: integration_tests.rs
