[package]
name = "wordle-cli"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
description = "The popular word guessing game as CLI application! Written in Rust."
homepage = "https://www.tohuwabohu.io/projects/wordle-cli"
documentation = "https://www.tohuwabohu.io/projects/wordle-cli"
repository = "https://github.com/tohuwabohu-io/wordle-cli"
readme = "README.md"
default-run = "game"
keywords = ["wordle", "game", "cli", "cli-game"]
exclude = [".gitignore", ".github/"]


[[bin]]
name = "game"
path = "src/main.rs"


[[bin]]
name = "import"
path = "src/bin/import.rs"

[dependencies]
rand = "0.8.5"
any_ascii = "0.3.1"
sys-locale = "0.2.0"
uuid = { version = "1.1.1", features = ["v4", "fast-rng"] }
clap = { version = "3.1.18", features = ["derive"] }
strum_macros = "0.24.0"
dotenv = "0.15.0"
chrono = "0.4.0"
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
console =  "0.15"
indicatif = "0.16.2"