[package]
name = "wordle-cli"
version = "1.0.1"
edition = "2021"
license-file = "LICENSE"
description = "The popular word guessing game as CLI application! Written in Rust."
homepage = "https://www.tohuwabohu.io/projects/wordle-cli"
documentation = "https://www.tohuwabohu.io/projects/wordle-cli"
repository = "https://github.com/tohuwabohu-io/wordle-cli"
readme = "README.md"
default-run = "wordle"
keywords = ["wordle", "game", "cli", "cli-game"]
exclude = [".gitignore", ".github/", ".idea/", "migrations/", "res/db/create.sql", "res/db/drop.sql", "*.iml"]


[[bin]]
name = "wordle"
path = "src/main.rs"

[dependencies]
any_ascii = "0.3.1"
uuid = { version = "1.1.1", features = ["v4", "fast-rng"] }
clap = { version = "3.1.18", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.0"
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
console =  "0.15"
indicatif = "0.16.2"